--- a/index.html
+++ b/index.html
@@ -8,51 +8,21 @@
 
 
     <h1>
-        <p align="center">СУДЕБНАЯ СИСТЕМА В ДРЕВНЕЙ РУСИ</p>
+        <p align="center">ТИТУЛЬНЫЙ ЛИСТ</p>
     </h1>
     <br>
-    <p align="left">Возникновение судебной системы в Древней Руси - вопрос мало исследованный. Во многом это
-        объясняется и тем, что в Древней Руси не было специальных судебных органов. Судебные функции выполняли
-        представители администрации, включая ее главу великого князя. </p>
-    <p align="left">Однако существовали специальные должностные лица помогавшие в отправлении правосудия. Судебные
-        функции выполняли также церковь и отдельные феодалы, которые имели право судить зависимых от них людей
-        (вотчинная юстиция). Судебные полномочия феодала составляли неотъемлемую часть его иммунитетных прав.</p>
-    <p align="left">
-        Судебная власть сосредоточивалась в древней Руси в руках князей и их чиновников (посадников и тиунов), веча и
-        общин. Процесс был состязательный и гласный. Дело решалось на основании представленных сторонами доказательств;
-        таковыми являлись: признание, свидетели и послухи, присяга, суды Божии или ордалии (т.е. испытание водой или
-        огнем), «поле» или судебный поединок, поличное и внешние знаки. Победитель в поединке считался правым.</p>
-    <p align="left">С другой стороны, если преступник был схвачен на месте или с похищенною вещью, этого считалось
-        достаточным для осуждения. Суд в своем решении констатировал исход состязания сторон; вначале решение суда было
-        устное, позднее оно облекалось в письменную форму. Обвинительный приговор суда выдавал «головою» осужденного
-        потерпевшему, для удовлетворения указанным судом порядком.
-
-    </p>
-    <p align="left">Древнерусское государство и право проходят в своем развитии ряд последовательно сменяющих друг
-        друга этапов. Период их возникновения и становления (IX-XI вв.) наименее обеспечен достоверными письменными
-        источниками, в том числе и содержащими информацию о развитии судебной системы в древнерусском государстве.
-
-    </p>
-    <p align="left">В древнерусской истории слово суд впервые упоминается в Уставе князя Владимира Святославовича "О
-        десятинах, судах и людях церковных". Владимир Святославович - с 969 года Князь Новгородский, а с 980 - Великий
-        князь Киевский, при котором состоялось крещение Руси, т.е. было принято христианство.
-
-    </p>
-    <p align="left">Точная дата принятия Устава историками не определена, но исследователи событий той эпохи относят
-        его появление к первым годам XI в. В документе упоминается действующая церковь Святой Богородицы (освящена в 996
-        году), княгиня Анна (умерла в 1011 году), митрополит и епископы (первые епископии Белгородская, Новгородская и
-        Полоцкая возникли в самом начале XI в.).
-    </p>
-    <p align="left">
-        Более древнего источника с упоминанием о судах, чем Устав "О десятинах, судах и людях церковных", до настоящего
-        времени не обнаружено, что и позволяет связывать именно с ним отделение суда от княжеской власти, появление на
-        Руси суда как учреждения правосудия и отсчитывать его историю с первых лет XI в.</p>
-    <p align="left">Принятие христианства, бесспорно, способствовало и становлению древнерусского права. Поначалу
-        посредством восприятия византийского права в виде церковных правил (канонов). В дальнейшем, по мере расширения
-        связей с западными и скандинавскими соседями, усиливалось и влияние их культуры, в том числе правовой.
-        Древнерусские князья начали создавать и собственные законы.
-    </p>
-
+    <h2>Aктуальность: </h2>
+    <p align="left" style="font-size: 24px">Малоизученность многих аспектов. Известные источники не позволяют составить исчерпывающего
+        представления о судоустройстве и судопроизводстве в древнюю эпоху.</p>
+    <br>
+    <h2>Цель: </h2>
+    <p align="left" style="font-size: 24px">Цель проекта — изучить и систематизировать информацию о судебной системе в Древней Руси для
+        представления полноценного обзора судебных органов и судопроизводства.</p>
+    <br>
+    <h2>Задачи: </h2>
+    <p align="left" style="font-size: 24px">1. Провести анализ общинных и княжеских судов. </p>
+    <p align="left" style="font-size: 24px">2. Изучить особенности судопроизводства в Киевской Руси в X–XI веках. </p>
+    <p align="left" style="font-size: 24px">3. Систематизировать и представить информацию в доступной форме. </p>
     <br>
     <p align="center">
         <img src="./images/image1.jpeg" width="600">
