корректировки в титульном листе

--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
 
 
     <h1>
-        <p align="center">ТИТУЛЬНЫЙ ЛИСТ</p>
+        <p align="center">СУДЕБНАЯ СИСТЕМА В ДРЕВНЕЙ РУСИ</p>
     </h1>
     <br>
-    <h2>Aктуальность: </h2>
+    <h1>
+        <p align="center">Введение</p>
+    </h1>
+    <h2>Титульный лист</h2>
+    <br>
+    <h3 style="font-size: 24px">Aктуальность: </h3>
     <p align="left" style="font-size: 24px">Малоизученность многих аспектов. Известные источники не позволяют составить исчерпывающего
         представления о судоустройстве и судопроизводстве в древнюю эпоху.</p>
     <br>
-    <h2>Цель: </h2>
+    <h3 style="font-size: 24px">Цель: </h3>
     <p align="left" style="font-size: 24px">Цель проекта — изучить и систематизировать информацию о судебной системе в Древней Руси для
         представления полноценного обзора судебных органов и судопроизводства.</p>
     <br>
-    <h2>Задачи: </h2>
+    <h3 style="font-size: 24px">Задачи: </h3>
     <p align="left" style="font-size: 24px">1. Провести анализ общинных и княжеских судов. </p>
     <p align="left" style="font-size: 24px">2. Изучить особенности судопроизводства в Киевской Руси в X–XI веках. </p>
     <p align="left" style="font-size: 24px">3. Систематизировать и представить информацию в доступной форме. </p>
